# bookshelf

./: .gitignore  AGENTS.md  Cargo.toml
codex-skills/bookshelf-milestones/: SKILL.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/src/: lib.rs  pdfium_worker.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/test/: Cargo.toml
crates/test/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: image_protocol.rs  kitty_spawn.rs  lib.rs
doc/: tdf-analysis.md
plan/: preview-rendering.md  reader-mode-rendering.md  roadmap.md  storage-enhancement.md  structure.md
plan/milestone/: 0001-workspace-scaffold.md  0002-preview-modes.md  0003-rlib-only.md  0004-settings-ui-sqlite.md  0005-cleanup-cargo-home.md  0006-scan-scope-setting.md  0007-library-scan-list.md  0008-scan-path-modal.md  0009-scan-path-modal-enter-only.md  0010-keybindings-esc-arrows.md  0011-scan-scope-in-scan-paths.md  0012-preview-mode-only-in-panel.md  0013-library-selection-highlight.md  0014-wrap-long-library-titles.md  0015-text-preview-first-n-pages.md  0016-preview-settings-input.md  0017-preview-settings-mode-row-max.md  0018-mode-chip-highlight-in-row.md  0019-preview-mode-left-right-no-wrap.md  0020-settings-menu-and-scan-panel-nav.md  0021-scan-scope-chip-highlight.md  0022-book-progress-sqlite.md  0023-reader-mode.md  0024-clear-screen-after-reader.md  0025-text-extraction-spacing.md  0026-reader-text-debug-dump.md  0027-unicode-art-rendering.md  0028-reader-image-mode-ratatui-image.md  0029-reader-image-zoom-pan.md  0030-reader-prefer-kitty-protocol.md  0031-reader-kitty-smoothness.md  0032-kitty-window-lifecycle.md  0033-kitty-reader-esc-quits.md  0034-kitty-image-transmit-pixel-cap.md  0035-reader-image-fit-height-center.md  0036-reader-keys-simplify-pan.md  0037-db-in-project-root.md  0038-remove-preview-feature.md  0039-reader-text-readability.md  0040-reader-text-wrap-and-placeholders.md  (+16 more)
scripts/kitty/: install.sh
scripts/pdfium/: fetch_and_probe.sh
