[workspace]
members = [
    "crates/app",
    "crates/application",
    "crates/core",
    "crates/engine",
    "crates/storage",
    "crates/test",
    "crates/ui",
]
default-members = ["crates/app"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.86"
directories = "5.0.1"
crossterm = "0.28.1"
ratatui = "0.29.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
pdf = "0.9.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
unicode-width = "0.2.0"
