[workspace]
members = [
    "crates/app",
    "crates/application",
    "crates/core",
    "crates/engine",
    "crates/storage",
    "crates/test",
    "crates/ui",
]
default-members = ["crates/app"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
directories = "5"
crossterm = "0"
ratatui = "0"
ratatui-image = { version = "10", default-features = false, features = [
    "crossterm",
    "image-defaults",
] }
image = { version = "0", default-features = false }
rusqlite = { version = "0", features = ["bundled"] }
pdf = "0"
pdfium-render = { version = "0", default-features = false, features = [
    "pdfium_latest",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0"
